# src/swagger.json
@@ -46,13 +46,18 @@
         "tags": ["User Management Profile"],
         "summary": "Get single users",
         "description": "Retrieve a single users.",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "parameters": [
           {
             "name": "user_id",
             "in": "query",
             "description": "Id:You will get single user details",
             "required": true,
-            "schema": { "minLength": 1, "type": "string" }
+            "schema": { "type": "string" }
           }
         ],
 
@@ -82,6 +87,7 @@
             "description": "Internal server error"
           }
         }
+   
       }
     },
 
@@ -630,13 +636,13 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/cards"
+                    "$ref": "#/components/schemas/card"
                   }
                 }
               },
               "application/xml": {
                 "schema": {
-                  "$ref": "#/components/schemas/cards"
+                  "$ref": "#/components/schemas/card"
                 }
               }
             }
@@ -672,13 +678,13 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/cards"
+                    "$ref": "#/components/schemas/card"
                   }
                 }
               },
               "application/xml": {
                 "schema": {
-                  "$ref": "#/components/schemas/cards"
+                  "$ref": "#/components/schemas/card"
                 }
               }
             }
@@ -742,13 +748,13 @@
             "required": true,
             "schema": { "minLength": 1, "type": "string" }
           },
-            {
-              "name": "card_id",
-              "in": "query",
-              "description": "Card Id:You will Delete single user card details",
-              "required": true,
-              "schema": { "minLength": 1, "type": "string" }
-            }
+          {
+            "name": "card_id",
+            "in": "query",
+            "description": "Card Id:You will Delete single user card details",
+            "required": true,
+            "schema": { "minLength": 1, "type": "string" }
+          }
         ],
 
         "responses": {
@@ -781,6 +787,15 @@
     }
   },
   "components": {
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
+      }
+    },
+
+
     "schemas": {
       "signup": {
         "type": "object",
